k8s/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-postgres
  namespace: fintech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-postgres
  template:
    metadata:
      labels:
        app: customer-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: customer-postgres-pvc
